[package]
name = "precision_pool"
version = "1.2.0"
edition = "2021"

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"
scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", tag = "v1.2.0" }
common = { git = "https://github.com/ociswap/pools-common", tag = "v1.1.1" }
oracle = { git = "https://github.com/ociswap/oracle", tag = "v1.2.1" }
precision_pool_hooks = { path = "hooks" }

[dev-dependencies]
radix-engine = "1.2.0"
scrypto-test = "1.2.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0" }
precision_pool_test_helper = { path = "test_helper" }
pretty_assertions = "1.3.0"
test-case = "3"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[profile.dev]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
