[package]
name = "precision_pool_test_helper"
version = "0.1.1"
edition = "2021"

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"
radix-engine = "1.2.0"
radix-transactions = "1.2.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.1" }
common = { git = "https://github.com/ociswap/pools-common", tag = "v1.2.0" }
precision_pool = { path = ".." }
registry_test_helper = { path = "../registry/test_helper" }
pretty_assertions = "1.3.0"
lazy_static = "1.4.0"
test_hook = { path = "../test_hook" }
precision_pool_hooks = { path = "../hooks" }
