[package]
name = "test_hook"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.6.0" }
common = { git = "https://github.com/ociswap/pools-common", tag = "v1.2.0" }
precision_pool_hooks = { path = "../hooks" }

[dev-dependencies]
radix-transactions = "1.2.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.1" }
precision_pool_test_helper = { path = "../test_helper" }
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
